--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
+  font-family: Roboto, sans-serif;
   line-height: 1.6;
 }
 
@@ -10,6 +10,10 @@ html {
 
 body {
   margin: 0;
+}
+
+h2 {
+  font-family: "Roboto-Condensed", sans-serif;
 }
 
 .banner {
