--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,11 @@
 html {
   box-sizing: border-box;
   font-family: Roboto, sans-serif;
-  line-height: 1.6;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
-}
-
-body {
-  margin: 0;
-}
-
-h2 {
-  font-family: "Roboto-Condensed", sans-serif;
-}
-
-.banner {
-  position: relative;
-  max-height: 500px;
-  overflow: hidden;
 }
 
 .img-flex {
@@ -27,14 +13,54 @@ h2 {
   width: 100%;
 }
 
+.banner {
+  position: relative;
+  display: inline-flex;
+  justify-content: space-around;
+  align-content: center;
+}
+
 .content {
   position: absolute;
+  display: inline;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 0;
+  justify-content: space-around;
+  align-content: center;
   flex-wrap: wrap;
   text-align: left;
-  width: 100%;
-  max-width: 50em;
-  padding-left: 1.5rem;
+}
+
+.img-hero {
+  width: 25%;
+}
+
+h2 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 3rem;
+}
+
+p {
+  font-size: 1.5rem;
+}
+
+.btn {
+  display: inline-block;
+  vertical-align: middle;
+  border-width: 3px;
+  border-radius: 8px;
+  padding: .4em .75em .3em;
+  text-decoration: none;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  font-weight: normal;
+}
+
+.btn-big {
+  font-size: 1.5rem;
+}
+
+.btn:hover {
+  background-color: #ccc;
 }
