--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+}
+
 .img-flex {
   display: block;
   width: 100%;
@@ -15,9 +19,12 @@ html {
 
 .banner {
   position: relative;
-  display: inline-flex;
+  display: flex;
   justify-content: space-around;
   align-content: center;
+  max-height: 500px;
+  max-width: 45em;
+  overflow: hidden;
 }
 
 .content {
@@ -25,14 +32,18 @@ html {
   display: inline;
   left: 50%;
   transform: translateX(-50%);
-  justify-content: space-around;
-  align-content: center;
+  align-items: center;
   flex-wrap: wrap;
   text-align: left;
+  top: auto;
 }
 
 .img-hero {
-  width: 25%;
+  width: 50%;
+}
+
+.text {
+  display: inline;
 }
 
 h2 {
