--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,16 @@ p {
   display: inline-block;
 }
 
+.hero {
+  display: inline;
+  width: 100%;
+}
+
 .banner {
   position: relative;
   max-height: 500px;
   overflow: hidden;
+  justify-content: flex-start;
 }
 
 .content {
