--- a/css/main.css
+++ b/css/main.css
@@ -20,18 +20,17 @@ body {
 h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 3rem;
-  display: inline-block;
   padding: 0;
   margin: 0;
 }
 
 p {
   font-size: 1.5rem;
-  display: inline-block;
 }
 
 .img-div {
   width: 100%;
+  padding: 1rem;
 }
 
 .hero {
@@ -44,15 +43,19 @@ p {
   position: relative;
   max-height: 500px;
   overflow: hidden;
-  justify-content: flex-start;
 }
 
 .text {
   padding: 1.5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
   display: flex;
+  width: 100%;
+  justify-content: space-between;
   position: absolute;
   left: 50%;
   top: 50%;
