--- a/css/main.css
+++ b/css/main.css
@@ -20,23 +20,24 @@ body {
 h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 3rem;
-  padding: 0;
+  padding: 0 1em 0 0;
   margin: 0;
 }
 
 p {
   font-size: 1.5rem;
+  margin: .5rem;
 }
 
 .img-div {
-  width: 100%;
-  padding: 1rem;
+  margin: 0;
+  padding: 1.5rem;
 }
 
 .hero {
-  display: block;
-  margin: 0 auto;
-  text-align: center;
+  display: flex;
+  width: 100%;
+  margin: 0 0 0 auto;
 }
 
 .banner {
@@ -48,19 +49,18 @@ p {
 .text {
   padding: 1.5rem;
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  max-width: 45em;
 }
 
 .content {
   display: flex;
   width: 100%;
-  justify-content: space-between;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  align-items: center;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .btn {
@@ -73,7 +73,6 @@ p {
   background-color: #333;
   color: #fff;
   text-align: center;
-  font-weight: normal;
 }
 
 .btn-big {
