--- a/css/main.css
+++ b/css/main.css
@@ -17,44 +17,42 @@ body {
   width: 100%;
 }
 
-h2 {
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 3rem;
-  padding: 0 1em 0 0;
-  margin: 0;
-}
-
-p {
-  font-size: 1.5rem;
-  margin: .5rem;
-}
-
-.img-div {
-  margin: 0;
-  padding: 1.5rem;
-}
-
-.hero {
-  display: flex;
-  width: 100%;
-  margin: 0 0 0 auto;
-}
-
 .banner {
   position: relative;
   max-height: 500px;
   overflow: hidden;
 }
 
+h2 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 3rem;
+  margin: 0;
+  padding: 0 2rem 0 0;
+}
+
+p {
+  font-size: 1.5rem;
+  display: flex;
+}
+
 .text {
-  padding: 1.5rem;
+  width: 120%;
+}
+
+.img-div {
   width: 100%;
-  max-width: 45em;
+}
+
+.hero {
+  display: flex;
+  width: 70%;
+  margin: 0 auto;
 }
 
 .content {
   display: flex;
   width: 100%;
+  max-width: 45em;
   position: absolute;
   left: 50%;
   top: 50%;
