--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   font-family: Roboto, sans-serif;
-  line-height: 1.4;
+  line-height: 1.6;
 }
 
 *, *::before, *::after {
@@ -27,16 +27,18 @@ h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 3rem;
   margin: 0;
-  padding: 0 2rem 0 0;
+  line-height: 1.2;
 }
 
 p {
   font-size: 1.5rem;
   display: flex;
+  margin: .8rem 0;
 }
 
 .text {
   width: 120%;
+  padding: 0 1rem 0 0;
 }
 
 .img-div {
@@ -46,7 +48,7 @@ p {
 .hero {
   display: flex;
   width: 70%;
-  margin: 0 auto;
+  margin: 0 0 0 1.3rem;
 }
 
 .content {
@@ -66,15 +68,16 @@ p {
   vertical-align: middle;
   border-width: 3px;
   border-radius: 8px;
-  padding: .4em .75em .3em;
+  padding: 1rem;
   text-decoration: none;
   background-color: #333;
   color: #fff;
   text-align: center;
+  font-family: Roboto, sans-serif;
 }
 
 .btn-big {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .btn:hover {
